# data-integration-protection-project

./: .env.example  .gitignore  README.md  RISK_CALCULATION_REVIEW.md  main.py  pyproject.toml  temp.ipynb
config/: data.yaml  experiment.yaml  experiment_CCI.yaml  experiment_CUI.yaml  experiment_ICB.yaml
src/: __init__.py  builder.py
src/database/: __init__.py  actions.py  insert.py  select.py
src/database/tables/: __init__.py  base.py  card_credit_info.py  card_user_info.py  individual_cb.py
src/graph/: __init__.py
src/metric/: __init__.py  categorical.py  combined.py  heom.py  numerical.py  pairwise.py
src/preprocess/: __init__.py  allocation.py  imputation.py  normalization.py
src/risk/: __init__.py  attribute.py  combined.py  identity.py
src/utils/: __init__.py  config.py  logger.py  result.py
